# ZFSin

./: .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  PORTING_NOTES.txt  README.md  Testing.md  ZFSin.sln  appveyor.yml
ZFSin/: CMakeLists.txt  OpenZFS.man  Resource.rc  Trace.h  ZFSin.inf  ZFSin.vcxproj  ZFSin.vcxproj.filters  debug.c  driver.c
ZFSin/spl/: CMakeLists.txt  spl_config.h
ZFSin/spl/include/: slab.h
ZFSin/spl/include/fs/: fs_subr.h
ZFSin/spl/include/osx/: atomic.h  condvar.h
ZFSin/spl/include/rpc/: xdr.h
ZFSin/spl/include/sharefs/: share.h
ZFSin/spl/include/spl/: events.h
ZFSin/spl/include/sys/: atomic.h  avl.h  byteorder.h  debug.h  errno.h  file.h  isa_defs.h  kmem.h  kmem_impl.h  kstat.h  list.h  mount.h  mutex.h  proc.h  processor.h  seg_kmem.h  signal.h  simd_x86.h  stropts.h  sunddi.h  sysevent.h  sysmacros.h  systm.h  taskq.h  taskq_impl.h  thread.h  time.h  timer.h  types.h  uio.h  vmem.h  vmem_impl.h  vnode.h  zmod.h  zone.h
ZFSin/spl/include/sys/sysevent/: eventdefs.h
ZFSin/spl/include/util/: qsort.h  sscanf.h
ZFSin/spl/include/vm/: anon.h  pvn.h  seg_kmem.h
ZFSin/spl/module/: zlibkern.vcxproj
ZFSin/spl/module/spl/: CMakeLists.txt  old-taskq.c  spl-condvar.c  spl-ddi.c  spl-debug.c  spl-err.c  spl-events.c  spl-kmem.c  spl-kobj.c  spl-kstat.c  spl-list.c  spl-mount.c  spl-mutex.c  spl-policy.c  spl-proc.c  spl-processor.c  spl-rwlock.c  spl-seg_kmem.c  spl-taskq.c  spl-thread.c  spl-time.c  spl-tsd.c  spl-uio.c  spl-vmem.c  spl-vnode.c  spl-windows.c  spl-xdr.c
ZFSin/zfs/: CMakeLists.txt  zfs_config.h
ZFSin/zfs/cmd/: CMakeLists.txt
ZFSin/zfs/cmd/arcstat/: arcstat.pl
ZFSin/zfs/cmd/kstat/: CMakeLists.txt  Resource.rc  kstat.c  kstat.h  kstat.vcxproj  kstat.vcxproj.filters
ZFSin/zfs/cmd/zdb/: CMakeLists.txt  zdb.c  zdb_il.c
ZFSin/zfs/cmd/zdb/zdb/: Resource.rc  zdb.vcxproj  zdb.vcxproj.filters
ZFSin/zfs/cmd/zfs/: CMakeLists.txt  zfs_iter.c  zfs_iter.h  zfs_main.c  zfs_osx.h  zfs_util.h
ZFSin/zfs/cmd/zfs/zfs/: Resource.rc  (+2 more)
ZFSin/zfs/cmd/zinject/: translate.c  zinject.c
ZFSin/zfs/cmd/zpool/: CMakeLists.txt  zpool_main.c  zpool_util.c  zpool_util.h  zpool_vdev.c
ZFSin/zfs/cmd/zstreamdump/: CMakeLists.txt  zstreamdump.c
ZFSin/zfs/cmd/ztest/: ztest.c
ZFSin/zfs/include/: libdiskmgt.h  libuutil.h  libzfs.h  libzfs_core.h  libzfs_impl.h  zfeature_common.h  zfs_comutil.h  zfs_deleg.h  zfs_fletcher.h  zfs_namecheck.h  zpios-ctl.h
ZFSin/zfs/include/linux/: blkdev_compat.h  kmap_compat.h  utsname_compat.h
ZFSin/zfs/include/sys/: ZFSPool.h  abd.h  aggsum.h  arc.h  arc_impl.h  avl.h  avl_impl.h  dbuf.h  ddt.h  dmu.h  dmu_impl.h  dmu_objset.h  dmu_recv.h  dmu_send.h  dmu_traverse.h  dmu_tx.h  dmu_zfetch.h  dnode.h  dsl_crypt.h  dsl_dataset.h  dsl_deleg.h  dsl_dir.h  dsl_pool.h  dsl_scan.h  edonr.h  efi_partition.h  finderinfo.h  gfs.h  hfs_internal.h  kstat_windows.h  metaslab.h  metaslab_impl.h  multilist.h  nvpair.h  range_tree.h  refcount.h  rrwlock.h  sa_impl.h  spa.h  spa_impl.h  (+49 more)
ZFSin/zfs/lib/: CMakeLists.txt
ZFSin/zfs/lib/libavl/: CMakeLists.txt
ZFSin/zfs/lib/libefi/: CMakeLists.txt  rdwr_efi.c
ZFSin/zfs/lib/libicp/: CMakeLists.txt
ZFSin/zfs/lib/libkstat/: CMakeLists.txt  kstat.c  kstat.h  libkstat.vcxproj  libkstat.vcxproj.filters
ZFSin/zfs/lib/libnvpair/: CMakeLists.txt  libnvpair.c  libnvpair_json.c
ZFSin/zfs/lib/libpthread/: CMakeLists.txt  pthread.h  pthread.vcxproj  pthread.vcxproj.filters  version.rc
ZFSin/zfs/lib/libshare/: CMakeLists.txt  afp.c  afp.h  libshare.c  nfs.c  smb.c  smb.h
ZFSin/zfs/lib/libspl/: CMakeLists.txt  crc32.c  fdatasync.c  gethrestime.c  gethrtime.c  getmntany.c  getopt.c  mkdirp.c  posix.c  strnlen.c  timestamp.c  uio.c  xdr.c  xdr_array.c  xdr_float.c  xdr_mem.c  zmount.c
ZFSin/zfs/lib/libunicode/: CMakeLists.txt
ZFSin/zfs/lib/libuuid/: CMakeLists.txt  all-io.h  gen_uuid.c  randutils.c
ZFSin/zfs/lib/libuutil/: CMakeLists.txt  uu_misc.c  uu_open.c  uu_string.c
ZFSin/zfs/lib/libzfs/: CMakeLists.txt  libzfs_changelist.c  libzfs_config.c  libzfs_crypto.c  libzfs_dataset.c  libzfs_diff.c  libzfs_fru.c  libzfs_graph.c  libzfs_import.c  libzfs_iter.c  libzfs_mount.c  libzfs_pool.c  libzfs_sendrecv.c  libzfs_status.c  libzfs_util.c
ZFSin/zfs/lib/libzfs_core/: CMakeLists.txt  libzfs_core.c
ZFSin/zfs/lib/libzpool/: CMakeLists.txt  kernel.c  taskq.c  util.c
ZFSin/zfs/lib/zlib-1.2.3/: CMakeLists.txt
ZFSin/zfs/man/man1/: ztest.1
ZFSin/zfs/man/man5/: zfs-module-parameters.5  zpool-features.5
ZFSin/zfs/man/man8/: zdb.8  zfs-program.8  zfs.8  zinject.8  zpool.8  zstreamdump.8
ZFSin/zfs/module/: CMakeLists.txt
ZFSin/zfs/module/avl/: avl.c
ZFSin/zfs/module/efidisk/: disk.c  diskwmi.c  geometry.c  pnp.c
ZFSin/zfs/module/icp/: CMakeLists.txt  illumos-crypto.c
ZFSin/zfs/module/lua/: CMakeLists.txt  lapi.c  lauxlib.c  lbitlib.c  ldo.c  lobject.c  lparser.c  lstrlib.c  lundump.c
ZFSin/zfs/module/nvpair/: fnvpair.c  nvpair.c  nvpair_alloc_fixed.c  nvpair_alloc_spl.c
ZFSin/zfs/module/unicode/: u8_textprep.c  uconv.c
ZFSin/zfs/module/zcommon/: CMakeLists.txt  zfs_comutil.c  zfs_deleg.c  zfs_fletcher.c  zfs_fletcher_avx512.c  zfs_fletcher_intel.c  zfs_fletcher_sse.c  zfs_fletcher_superscalar.c  zfs_fletcher_superscalar4.c  zfs_namecheck.c  zfs_prop.c  zfs_uio.c  zpool_prop.c  zprop_common.c
ZFSin/zfs/module/zfs/: CMakeLists.txt  abd.c  aggsum.c  arc.c  bpobj.c  bptree.c  dbuf.c  dbuf_stats.c  ddt.c  dmu.c  dmu_diff.c  dmu_object.c  dmu_objset.c  dmu_recv.c  dmu_send.c  dmu_traverse.c  dmu_tx.c  dmu_zfetch.c  dnode.c  dnode_sync.c  dsl_bookmark.c  dsl_crypt.c  dsl_dataset.c  dsl_deadlist.c  dsl_deleg.c  dsl_destroy.c  dsl_dir.c  dsl_pool.c  dsl_prop.c  dsl_scan.c  dsl_synctask.c  dsl_userhold.c  edonr_zfs.c  fm.c  gfs.c  gzip.c  lz4.c  metaslab.c  mmp.c  multilist.c  (+85 more)
ZFSin/zfs/module/zpios/: pios.c
ZFSin/zfs/resources/: resources.rc
ZFSin/zfs/tests/: Makefile.am  configure.ac
ZFSin/zfs/tests/config/: Rules.am  commands-bsd.m4  commands-common.m4  commands-linux.m4  system.m4
ZFSin/zfs/tests/scripts/: missing_cmd  mkfile  test-fails
(+1348 files in other folders)
