add_subdirectory(zlib-1.2.3)
add_subdirectory(libpthread)
add_subdirectory(libzfs)
add_subdirectory(libspl)
add_subdirectory(libkstat)
add_subdirectory(libuutil)
add_subdirectory(libnvpair)
add_subdirectory(libicp)
add_subdirectory(libavl)
add_subdirectory(libuuid)
add_subdirectory(libunicode)
add_subdirectory(libzfs_core)
add_subdirectory(libefi)
add_subdirectory(libshare)
add_subdirectory(libzpool)